[package]
name = "rscp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.6"
env_logger = "0.10.0"
log = "0.4.17"
rust-crypto = "0.2.36"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.93"
walkdir = "2.3.2"
