[package]
name = "rdm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
md-5 = "0.10.5"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.93"
walkdir = "2.3.2"
